fixed api response